--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,16 @@ header {
     display:flex;
     align-items:center;
 }
+.menu ul{
+    display: inline-flex;
+    margin: 50px;
+}
+.menu ul li{
+    list-style: none;
+    margin: 0 20px;
+    color: #b2b1b1;
+    cursor: pointer;
+}
 
 .image {
     margin-right:10px;
