--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,7 @@
     position: relative;
     bottom: 0;
     width: 100%;
-    background-color: #4a7c57;
+    background: #4a7c57;
     color: #e1e8e3;
     text-align: center;
     padding: 1rem 0;
