--- a/styles.css
+++ b/styles.css
@@ -84,7 +84,7 @@
     bottom: 0;
     width: 100%;
     background: #4a7c57;
-    color: #e1e8e3;
+    color: white;
     text-align: center;
     padding: 1rem 0;
     font-size: 0.9rem;
